// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterInline > renders correctly with an active filter 1`] = `
"<div data-v-12532412="" class="sy-filters-inline d-flex flex-wrap max-width-none ma-n2"><button data-v-12532412="" type="button" class="v-btn v-btn--elevated v-theme--light bg-secondary v-btn--density-default v-btn--rounded v-btn--size-default v-btn--variant-elevated sy-filter-name ma-2" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-0"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
    <!----><span class="v-btn__content" data-no-activator=""><div data-v-12532412="" class="v-badge v-badge--inline ml-n1 mr-1"><div class="v-badge__wrapper"><!----><transition-stub name="scale-rotate-transition" appear="false" persisted="false" css="true"><span class="v-badge__badge v-theme--light" aria-atomic="true" aria-label="1 filtre" aria-live="polite" role="status">1</span></transition-stub>
</div>
</div> <i data-v-12532412="" class="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z mdi v-icon notranslate v-theme--light v-icon--size-small ml-1" aria-hidden="true"></i></span>
<!---->
<!----></button>
<!---->
</div>"
`;

exports[`FilterInline > renders correctly with multiple active filters 1`] = `
"<div data-v-12532412="" class="sy-filters-inline d-flex flex-wrap max-width-none ma-n2"><button data-v-12532412="" type="button" class="v-btn v-btn--elevated v-theme--light bg-secondary v-btn--density-default v-btn--rounded v-btn--size-default v-btn--variant-elevated sy-filter-name ma-2" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-0"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
    <!----><span class="v-btn__content" data-no-activator=""><div data-v-12532412="" class="v-badge v-badge--inline ml-n1 mr-1"><div class="v-badge__wrapper"><!----><transition-stub name="scale-rotate-transition" appear="false" persisted="false" css="true"><span class="v-badge__badge v-theme--light" aria-atomic="true" aria-label="1 filtre" aria-live="polite" role="status">1</span></transition-stub>
</div>
</div> <i data-v-12532412="" class="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z mdi v-icon notranslate v-theme--light v-icon--size-small ml-1" aria-hidden="true"></i></span>
<!---->
<!----></button>
<!----><button data-v-12532412="" type="button" class="v-btn v-btn--elevated v-theme--light bg-secondary v-btn--density-default v-btn--rounded v-btn--size-default v-btn--variant-elevated sy-filter-profession ma-2" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-2"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
  <!----><span class="v-btn__content" data-no-activator=""><div data-v-12532412="" class="v-badge v-badge--inline ml-n1 mr-1"><div class="v-badge__wrapper"><!----><transition-stub name="scale-rotate-transition" appear="false" persisted="false" css="true"><span class="v-badge__badge v-theme--light" aria-atomic="true" aria-label="2 filtres" aria-live="polite" role="status">2</span></transition-stub>
  </div>
  </div> <i data-v-12532412="" class="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z mdi v-icon notranslate v-theme--light v-icon--size-small ml-1" aria-hidden="true"></i></span>
  <!---->
  <!---->
</button>
<!---->
</div>"
`;

exports[`FilterInline > should render correctly 1`] = `"<div data-v-12532412="" class="sy-filters-inline d-flex flex-wrap max-width-none ma-n2"></div>"`;

exports[`FiltersInline locales > should return the correct locale 1`] = `"0 filtre"`;

exports[`FiltersInline locales > should return the correct locale 2`] = `"1 filtre"`;

exports[`FiltersInline locales > should return the correct locale 3`] = `"2 filtres"`;
